--- a/backoffice/newsletter/newsletterTemplate.html
+++ b/backoffice/newsletter/newsletterTemplate.html
@@ -398,7 +398,7 @@
                             <div class="heading-section heading-section-black">
                                 <h2>O que é a Techn&Art?</h2>
                                 <p>Centro de investigação e desenvolvimento nos domínios da Salvaguarda do Património e da sua Valorização, experimental e aplicada.</p>
-                                <p><a href="#" class="btn btn-primary">Saber mais</a></p>
+                                <p><a href="http://www.techneart.ipt.pt/tecnart/sobre.php" class="btn btn-primary">Saber mais</a></p>
                             </div>
                         </td>
                     </tr>
@@ -494,7 +494,7 @@
                                                 <tbody>
                                                     <tr>
                                                         <td style="text-align: center;">
-                                                            <p><a href="" style="color: white;">Cancelar Subscrição</a></p>
+                                                            <p><a href="http://localhost/Tech-Art-C/tecnart/cancelarSubscricao.php?token={{TOKEN}}" style="color: white;">Cancelar Subscrição</a></p>
                                                         </td>
                                                     </tr>
                                                 </tbody>
