--- a/backoffice/newsletter/newsletterTemplate.html
+++ b/backoffice/newsletter/newsletterTemplate.html
@@ -494,7 +494,7 @@
                                                 <tbody>
                                                     <tr>
                                                         <td style="text-align: center;">
-                                                            <p><a href="http://localhost/Tech-Art-C/tecnart/cancelarSubscricao.php?token={{TOKEN}}" style="color: white;">Cancelar Subscrição</a></p>
+                                                            {{TOKEN}}
                                                         </td>
                                                     </tr>
                                                 </tbody>
